--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
